--- a/res/css/style.css
+++ b/res/css/style.css
@@ -6,6 +6,7 @@
   font-style: normal; }
 
 
+
 .cabeceraBlog {
     border-bottom: 3px solid #bbb;
     margin-bottom: 3em;
@@ -500,9 +501,9 @@ header {
       position: absolute;
       top: -80px;
       right: 3em;
-      color: #fff;
+      color: #eAeAeA;
       padding: 2em 1.5em;
-      background: #eAeAeA;
+      background: #151515;
       -webkit-transition: 0.3s;
       -o-transition: 0.3s;
       transition: 0.3s; }
