--- a/res/css/custom.css
+++ b/res/css/custom.css
@@ -1,148 +1,36 @@
-.blog .no-gutters>[class*=col-]{
-	padding-right: 0;
-    padding-left: 0;
+.loginAdmin{
+  margin: 3em 0 3em ;
+   margin-left: 33%
+  
+}
+.btnAdmin{
+	 margin: 3em 3em 3em ;
+}
+input[type="submit"] {
+	margin-left: 20px;
+	/*float:right;  */
 }
 
-.blog media (min-width: 992px)
-.col-lg-6 {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
-}
+.inputSelect{
+	float:center;
+      font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+        height: 50px;
+            color: inherit;
+    font: inherit;
 
-.blog *, ::after, ::before {
-    box-sizing: border-box;
-}
-.blog * {
+        -webkit-appearance: textfield;
+    background-color: white;
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    padding: 1px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: initial;
+    border-image: initial;
+        color: inherit;
+    font: inherit;
     margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
-.blog .img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-.blog img {
-    vertical-align: middle;
-    border-style: none;
 }
 
-.blog .no-gutters>[class*=col-] {
-    padding-right: 0;
-    padding-left: 0;
-}
-@media (min-width: 992px)
-.blog .col-lg-6 {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
-}
-
-.blog .bg-black {
-    background-color: #161616!important;
-}
-.blog .text-center {
-    text-align: center!important;
-}
-.blog .h-100 {
-    height: 100%!important;
-}
-.blog *, ::after, ::before {
-    box-sizing: border-box;
-}
-
-.blog div {
-    display: block;
-}
-
-.bg-black .h-100 {
-    height: 100%!important;
-}
-.bg-black .d-flex {
-    display: -ms-flexbox!important;
-    display: flex!important;
-}
-.bg-black *, ::after, ::before {
-    box-sizing: border-box;
-}
-
-/* */ 
-
-@media (min-width: 992px)
-.d-flex .projects-section .project-text {
-    padding: 5rem;
-}
-
-.d-flex .projects-section .project-text {
-    padding: 3rem;
-    font-size: 90%;
-}
-@media (min-width: 992px)
-.d-flex .text-lg-left {
-    text-align: left!important;
-}
-.d-flex .text-center {
-    text-align: center!important;
-}
-.d-flex .mb-auto, .my-auto {
-    margin-bottom: auto!important;
-}
-.d-flex .mt-auto, .my-auto {
-    margin-top: auto!important;
-}
-.d-flex .w-100 {
-    width: 100%!important;
-}
-.d-flex *, ::after, ::before {
-    box-sizing: border-box;
-}
-.d-flex div {
-    display: block;
-}
-
-/* */ 
-.project-text .text-white {
-    color: #fff!important;
-}
-.project-text .h4, h4 {
-    font-size: 1.5rem;
-}
-
-.project-text .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-}
-.project-text h1, h2, h3, h4, h5, h6 {
-    margin-top: 0;
-    margin-bottom: .5rem;
-}
-.project-text *, ::after, ::before {
-    box-sizing: border-box;
-}
-
-.project-text .text-white-50 {
-    color: rgba(255,255,255,.5)!important;
-}
-.project-text .mb-0, .my-0 {
-    margin-bottom: 0!important;
-}
-.project-text p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-.project-text *, ::after, ::before {
-    box-sizing: border-box;
-}
-.project-text p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
